--- a/index.html
+++ b/index.html
@@ -46,14 +46,11 @@
           </ul>
         </nav>
 
-        <button type="button" class="header__menu-burger-btn menu-burger-btn-close">
+        <button type="button" class="header__menu-burger-btn menu-burger-btn-close" data-menu-open>
           <span>
             <svg width="40" height="40">
               <use href="./images/icon.svg#menu-burger"></use>
-            </svg>
-            <!-- <svg width="40" height="40">
-              <use href="./images/icon.svg#icon-close"></use>
-            </svg> -->
+            </svg>            
           </span>
         </button>
 
@@ -79,6 +76,57 @@
           </li>
         </ul>
       </div>
+
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu__container">
+
+          <button class="mobile-menu__close-btn" data-menu-close>
+          <svg class="mobile-menu__close-icon" width="40" height="40">
+                <use href="./images/icon.svg#icon-close"></use>
+              </svg>
+        </button>
+
+        <ul class="mobile-menu__nav-list list">
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link link current" href="">Студия</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link link" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link link" href="">Контакты</a>
+            </li>
+          </ul>
+
+          <ul class="mobile-menu__contacts list">
+            <li class="mobile-menu__tel">
+              <a class="mobile-menu__tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            <li class="mobile-menu__mail"></li>
+              <a class="mobile-menu__mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+          </ul>
+
+          <ul class="mobile-menu__social list">
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="">Instagram</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="">Twitter</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="">Facebook</a>
+            </li>
+            <li class="mobile-menu__social-item">
+              <a class="mobile-menu__social-link link" href="">LinkedIn</a>
+            </li>
+          </ul>
+       
+        </div>        
+      </div>  
+      
     </header>
     <!--=================end header=================-->
 
@@ -639,5 +687,6 @@
     </div> -->
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
