пропис медія в хедері

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
           <a class="header__logo-link link" href="" lang="en">
             <span class="logo-link__logo-part-one">Web</span>Studio</a
           >
-          <ul class="nav-list list">
-            <li class="nav-list-item">
-              <a class="nav-list-link link current" href="">Студия</a>
+          <ul class="header__nav-list list">
+            <li class="header__nav-item">
+              <a class="header__nav-link link current" href="">Студия</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="./portfolio.html"
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="">Контакты</a>
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -55,7 +55,7 @@
         </button>
 
         <ul class="header__contacts-list list">
-          <li class="contacts-header-list-item">
+          <li class="header__contacts-item">
             <a
               class="contacts-header-list-link link"
               href="mailto:info@devstudio.com"
