--- a/portfolio.html
+++ b/portfolio.html
@@ -31,17 +31,17 @@
           <a class="header__logo-link link" href="" lang="en">
             <span class="logo-link__logo-part-one">Web</span>Studio</a
           >
-          <ul class="nav-list list">
-            <li class="nav-list-item">
-              <a class="nav-list-link link current" href="">Студия</a>
+          <ul class="header__nav-list list">
+            <li class="header__nav-item">
+              <a class="header__nav-link link current" href="">Студия</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="./portfolio.html"
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="">Контакты</a>
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
