--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
         <ul class="header__contacts-list list">
           <li class="header__contacts-item">
             <a
-              class="contacts-header-list-link link"
+              class="header__contacts-link link"
               href="mailto:info@devstudio.com"
             >
-              <svg class="contact-icon-link" width="16" height="12">
+              <svg class="header__contacts-icon" width="16" height="12">
                 <use href="./images/icon.svg#letter"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="contacts-header-list-item">
-            <a class="contacts-header-list-link link" href="tel:+380961111111">
-              <svg class="contact-icon-link" width="10" height="16">
+          <li class="header__contacts-item">
+            <a class="header__contacts-link link" href="tel:+380961111111">
+              <svg class="header__contacts-icon" width="10" height="16">
                 <use href="./images/icon.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
