адаптація hero для mobile

--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
     <!--=================start main=================-->
     <main>
       <!-- Hero -->
-      <!-- <section class="hero">
-        <div class="container hero-container">
-          <h1 class="hero-title">
+      <section class="hero">
+        <div class="container hero__container">
+          <h1 class="hero__title">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button class="hero-button" type="button" data-modal-open>
+          <button class="hero__button" type="button" data-modal-open>
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- specifics -->
       <!-- <section class="section">
