--- a/portfolio.html
+++ b/portfolio.html
@@ -132,12 +132,12 @@
 
     <!--=================start main=================-->
     <main>
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
-          <h1 class="visually-hidden">Проекты</h1>
+          <h1 class="visually-hidden">Проекты</h1> -->
 
           <!-- filter -->
-          <ul class="filter-list list">
+          <!-- <ul class="filter-list list">
             <li class="filter-list-item">
               <button class="filter-list-button" type="button">Все</button>
             </li>
@@ -159,10 +159,10 @@
                 Маркетинг
               </button>
             </li>
-          </ul>
+          </ul> -->
 
           <!-- projects -->
-          <ul class="projects-list list">
+          <!-- <ul class="projects-list list">
             <li class="projects-list-item">
               <a class="projects-list-link link" href="">
                 <div class="projects-list-link-img">
@@ -382,16 +382,16 @@
                 </div>
               </a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </section>
     </main>
     <!--=================end main=================-->
 
     <!--=================start footer=================-->
-    <footer class="footer">
-      <div class="container footer-container">
-        <div class="adress">
+    <!-- <footer class="footer"> -->
+      <!-- <div class="container footer-container"> -->
+        <!-- <div class="adress">
           <a class="footer-logo-link link" href="" lang="en">
             <span class="logo-part-one">Web</span>Studio</a
           >
@@ -420,9 +420,9 @@
               </li>
             </ul>
           </address>
-        </div>
+        </div> -->
 
-        <div class="footer-social">
+        <!-- <div class="footer-social">
           <p class="footer-text">присоединяйтесь</p>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
@@ -457,10 +457,10 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- form -->
-        <div>
+        <!-- <div>
           <p class="footer-text">Подпишитесь на рассылку</p>
           <form name="email" autocomplete="on">
             <label>
@@ -481,9 +481,10 @@
               </div>
             </button>
           </form>
-        </div>
+        </div> -->
       </div>
     </footer>
     <!--=================end footer=================-->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
