зкореговано бордер у mobile-menu для social

--- a/index.html
+++ b/index.html
@@ -111,14 +111,17 @@
 
           <ul class="mobile-menu__social list">
             <li class="mobile-menu__social-item">
-              <a class="mobile-menu__social-link link" href="">Instagram</a>
+              <a class="mobile-menu__social-link link" href="">Instagram </a>              
             </li>
+            <span class="mobile-menu__social-border"></span>
             <li class="mobile-menu__social-item">
               <a class="mobile-menu__social-link link" href="">Twitter</a>
             </li>
+            <span class="mobile-menu__social-border"></span>
             <li class="mobile-menu__social-item">
               <a class="mobile-menu__social-link link" href="">Facebook</a>
             </li>
+            <span class="mobile-menu__social-border"></span>
             <li class="mobile-menu__social-item">
               <a class="mobile-menu__social-link link" href="">LinkedIn</a>
             </li>
