адаптовано specifics section
для mobile, tablet, desktop

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </section>
 
       <!-- specifics -->
-      <!-- <section class="section">
+      <section class="section specifics__section">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="specifics__list list">
@@ -207,7 +207,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- work -->
       <!-- <section class="section work">
