--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <!--=================start main=================-->
     <main>
-      <!-- Hero -->
+      <!------------------ Hero ------------------->
       <section class="hero">
         <div class="container hero__container">
           <h1 class="hero__title">
@@ -155,7 +155,7 @@
         </div>
       </section>
 
-      <!-- specifics -->
+      <!--------------------------- specifics ----------------------------->
       <section class="section specifics__section">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
@@ -216,7 +216,7 @@
         </div>
       </section>
 
-      <!-- work -->
+      <!------------------------ work ---------------------------->
       <section class="section work">
         <div class="container">
           <h2 class="work__title title">Чем мы занимаемся</h2>
@@ -316,14 +316,13 @@
         </div>
       </section>
 
-      <!-- team -->
-      <!-- <section class="section team">
+      <!---------------------- team --------------------------->
+      <section class="section team">
         <div class="container">
           <h2 class="team__title title">Наша команда</h2>
-          <ul class="team__list list"> -->
-
-      <!--team 1-->
-      <!-- <li class="team__item">
+          <ul class="team__list list">
+            <!--team 1-->
+            <li class="team__item">
               <img
                 class="team__img"
                 src="./images/team1.jpg"
@@ -368,10 +367,10 @@
                   </li>
                 </ul>
               </div>
-            </li> -->
+            </li>
 
-      <!--team 2-->
-      <!-- <li class="team__item">
+            <!--team 2-->
+            <li class="team__item">
               <img
                 class="team__img"
                 src="./images/team2.jpg"
@@ -416,10 +415,10 @@
                   </li>
                 </ul>
               </div>
-            </li> -->
+            </li>
 
-      <!--team 3-->
-      <!-- <li class="team__item">
+            <!--team 3-->
+            <li class="team__item">
               <img
                 class="team__img"
                 src="./images/team3.jpg"
@@ -464,10 +463,10 @@
                   </li>
                 </ul>
               </div>
-            </li> -->
+            </li>
 
-      <!--team 4-->
-      <!-- <li class="team__item">
+            <!--team 4-->
+            <li class="team__item">
               <img
                 class="team__img"
                 src="./images/team4.jpg"
@@ -512,10 +511,10 @@
                   </li>
                 </ul>
               </div>
-            </li> -->
-      <!-- </ul> -->
-      <!-- </div> -->
-      <!-- </section> -->
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <!--our clients-->
       <!-- <section class="section">
