--- a/index.html
+++ b/index.html
@@ -323,12 +323,62 @@
           <ul class="team__list list">
             <!--team 1-->
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/team1.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team-desktop-img.webp    1x,
+                    ./images/desktop/team-desktop-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team-desktop-img.jpg    1x,
+                    ./images/desktop/team-desktop-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team-tablet-img.webp    1x,
+                    ./images/tablet/team-tablet-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team-img.jpg    1x,
+                    ./images/tablet/team-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team-img.webp    1x,
+                    ./images/mobile/team-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team-img.jpg    1x,
+                    ./images/mobile/team-img@2x.jpg 2x
+                  "
+                />
+                <img
+                  class="team__img"
+                  src=""
+                  alt="Игорь Демьяненко"
+                  width="270"
+                />
+              </picture>
+
               <div class="team__description">
                 <h3 class="team__list-title title">Игорь Демьяненко</h3>
                 <p class="team__list-text" lang="en">Product Designer</p>
@@ -371,12 +421,57 @@
 
             <!--team 2-->
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/team2.jpg"
-                alt="Ольга Репина"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team2-desktop-img.webp    1x,
+                    ./images/desktop/team2-desktop-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team2-desktop-img.jpg    1x,
+                    ./images/desktop/team2-desktop-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team2-tablet-img.webp    1x,
+                    ./images/tablet/team2-tablet-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team2-tablet-img.jpg    1x,
+                    ./images/tablet/team2-tablet-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team2img.webp    1x,
+                    ./images/mobile/team2img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team2img.jpg    1x,
+                    ./images/mobile/team2img@2x.jpg 2x
+                  "
+                />
+                <img class="team__img" src="" alt="Ольга Репина" width="270" />
+              </picture>
+
               <div class="team__description">
                 <h3 class="team__list-title title">Ольга Репина</h3>
                 <p class="team__list-text" lang="en">Frontend Developer</p>
@@ -419,12 +514,62 @@
 
             <!--team 3-->
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/team3.jpg"
-                alt="Николай Тарасов"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team3-desktop-img.webp    1x,
+                    ./images/desktop/team3-desktop-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team3-desktop-img.jpg    1x,
+                    ./images/desktop/team3-desktop-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team3-tablet-img.webp    1x,
+                    ./images/tablet/team3-tablet-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team3-tablet-img.jpg    1x,
+                    ./images/tablet/team3-tablet-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team3img.webp    1x,
+                    ./images/mobile/team3img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team3img.jpg    1x,
+                    ./images/mobile/team3img@2x.jpg 2x
+                  "
+                />
+                <img
+                  class="team__img"
+                  src=""
+                  alt="Николай Тарасов"
+                  width="270"
+                />
+              </picture>
+
               <div class="team__description">
                 <h3 class="team__list-title title">Николай Тарасов</h3>
                 <p class="team__list-text" lang="en">Marketing</p>
@@ -467,12 +612,62 @@
 
             <!--team 4-->
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/team4.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team4-desktop-img.webp    1x,
+                    ./images/desktop/team4-desktop-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team4-desktop-img.jpg    1x,
+                    ./images/desktop/team4-desktop-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team4-tablet-img.webp    1x,
+                    ./images/tablet/team4-tablet-img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team4-tablet-img.jpg    1x,
+                    ./images/tablet/team4-tablet-img@2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team4img.webp    1x,
+                    ./images/mobile/team4img@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mobile/team4img.jpg    1x,
+                    ./images/mobile/team4img@2x.jpg 2x
+                  "
+                />
+                <img
+                  class="team__img"
+                  src=""
+                  alt="Михаил Ермаков"
+                  width="270"
+                />
+              </picture>
+
               <div class="team__description">
                 <h3 class="team__list-title title">Михаил Ермаков</h3>
                 <p class="team__list-text" lang="en">UI Designer</p>
