--- a/index.html
+++ b/index.html
@@ -712,46 +712,46 @@
       </section>
 
       <!--our clients-->
-      <!-- <section class="section">
+      <section class="section clients">
         <div class="container">
-          <h2 class="clients clients__title title">Постоянные клиенты</h2>
+          <h2 class="clients__title title">Постоянные клиенты</h2>
           <ul class="clients__list list">
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icon.svg#group"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icon.svg#group-1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icon.svg#group-2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icon.svg#group-3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icon.svg#group-4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icon.svg#group-5"></use>
@@ -760,7 +760,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!--=================end main=================-->
 
