редагування rкласів portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       <div class="container header__container">
         <nav class="header__navigation">
           <a class="header__logo-link link" href="" lang="en">
-            <span class="logo-link__logo-part-one">Web</span>Studio</a
+            <span class="header__logo-link_part-one">Web</span>Studio</a
           >
           <ul class="header__nav-list list">
             <li class="header__nav-item">
@@ -389,99 +389,99 @@
     <!--=================end main=================-->
 
     <!--=================start footer=================-->
-    <!-- <footer class="footer"> -->
-      <!-- <div class="container footer-container"> -->
-        <!-- <div class="adress">
-          <a class="footer-logo-link link" href="" lang="en">
-            <span class="logo-part-one">Web</span>Studio</a
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="footer-address">
+          <a class="footer__logo-link link" href="" lang="en">
+            <span class="footer__logo-link_part-one">Web</span>Studio</a
           >
           <address>
-            <ul class="address-list list">
-              <li class="address-list-item">
+            <ul class="footer-address__list list">
+              <li class="footer-address__item">
                 <a
-                  class="address-list-link link"
+                  class="footer-address__link link"
                   href="https://goo.gl/maps/DS2FpUbjy8NpvMt88"
                   target="_blank"
                 >
                   г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="address-list-item">
+              <li class="footer-address__item">
                 <a
-                  class="address-list-link-item link"
+                  class="footer-address__link-item link"
                   href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="address-list-item">
-                <a class="address-list-link-item link" href="tel:+380991111111"
+              <li class="footer-address__item">
+                <a class="footer-address__link-item link" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
               </li>
             </ul>
           </address>
-        </div> -->
+        </div>
 
-        <!-- <div class="footer-social">
+        <div class="footer-social">
           <p class="footer-text">присоединяйтесь</p>
-          <ul class="footer-social-list list">
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
+          <ul class="footer-social__list list">
+            <li class="footer-social__item">
+              <a class="footer-social__link" href="">
                 <svg width="20" height="20">
                   <use
-                    class="footer-social-icon"
+                    class="footer-social__icon"
                     href="./images/icon.svg#instagram"
                   ></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
+            <li class="footer-social__item">
+              <a class="footer-social__link" href="">
                 <svg width="20" height="20">
                   <use href="./images/icon.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
+            <li class="footer-social__item">
+              <a class="footer-social__link" href="">
                 <svg width="20" height="20">
                   <use href="./images/icon.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
+            <li class="footer-social__item">
+              <a class="footer-social__link" href="">
                 <svg width="20" height="20">
                   <use href="./images/icon.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
-        </div> -->
+        </div>
 
         <!-- form -->
-        <!-- <div>
+        <div class="form">
           <p class="footer-text">Подпишитесь на рассылку</p>
           <form name="email" autocomplete="on">
             <label>
               <input
-                class="email-subscribe"
+                class="footer-form__email-subscribe"
                 type="email"
                 name="email"
                 autofocus
                 placeholder="E-mail"
               />
             </label>
-            <button class="form-btn" type="submit">
-              <div class="form-text-icon-btn">
+            <button class="footer-form__btn" type="submit">
+              <div class="form__text-icon-btn">
                 Подписаться
-                <svg class="form-icon-send" width="24" height="24">
+                <svg class="form__icon-send" width="24" height="24">
                   <use href="./images/icon.svg#icon-send"></use>
                 </svg>
               </div>
             </button>
           </form>
-        </div> -->
+        </div>
       </div>
     </footer>
     <!--=================end footer=================-->
