--- a/index.html
+++ b/index.html
@@ -864,91 +864,93 @@
     </footer>
     <!--=================end footer=================-->
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="modal-close-icon" width="18" height="18">
+        <button type="button" class="modal_close-btn" data-modal-close>
+          <svg class="modal__close-icon" width="18" height="18">
             <use href="./images/icon.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
 
-        <form class="modal-form">
-          <div class="form-input-wrapper">
-            <label class="form-field"
-              ><span class="form-text">Имя</span>
-              <span class="form-user">
+        <form class="modal__form">
+          <div class="form__input-wrapper">
+            <label class="form__field"
+              ><span class="form__text">Имя</span>
+              <span class="form__user">
                 <input
                   name="user_name"
-                  class="form-input"
+                  class="form_input"
                   type="text"
                   required
                   minlength="2"
                 />
-                <svg class="input-icon" width="18" height="18">
+                <svg class="form__input-icon" width="18" height="18">
                   <use href="./images/icon.svg#person"></use>
                 </svg>
               </span>
             </label>
 
-            <label class="form-field"
-              ><span class="form-text">Телефон</span>
-              <span class="form-user">
+            <label class="form__field"
+              ><span class="form__text">Телефон</span>
+              <span class="form__user">
                 <input
                   name="user_tel"
-                  class="form-input"
+                  class="form_input"
                   type="tel"
                   required
                   pattern="[0-9]{10}"
                 />
-                <svg class="input-icon" width="18" height="18">
+                <svg class="form__input-icon" width="18" height="18">
                   <use href="./images/icon.svg#phone"></use>
                 </svg>
               </span>
             </label>
 
-            <label class="form-field"
-              ><span class="form-text">Почта</span>
-              <span class="form-user">
+            <label class="form__field"
+              ><span class="form__text">Почта</span>
+              <span class="form__user">
                 <input
                   name="user_email"
-                  class="form-input"
+                  class="form_input"
                   type="email"
                   required
                 />
-                <svg class="input-icon" width="18" height="18">
+                <svg class="form__input-icon" width="18" height="18">
                   <use href="./images/icon.svg#email"></use>
                 </svg>
               </span>
             </label>
 
-            <label class="form-field"
-              ><span class="form-text">Комментарий</span>
+            <label class="form__field"
+              ><span class="form__text">Комментарий</span>
               <textarea
                 name="comment"
-                class="form-comment"
+                class="form__comment"
                 placeholder="Введите текст"
               ></textarea>
             </label>
           </div>
 
-          <div class="form-checkbox-wrapper">
+          <div class="form__checkbox-wrapper">
             <input
               name="accept-policy"
-              class="form-checkbox visually-hidden"
+              class="form__checkbox visually-hidden"
               type="checkbox"
               id="policy-checkbox"
               required
             />
-            <label class="form-checkbox-label" for="policy-checkbox"
+            <label class="form__checkbox-label" for="policy-checkbox"
               >Соглашаюсь с рассылкой и принимаю&nbsp;
-              <a class="accept-policy-link" href="">Условия договора</a></label
+              <a class="form__accept-policy-link" href=""
+                >Условия договора</a
+              ></label
             >
           </div>
-          <button class="send-btn" type="submit">Отправить</button>
+          <button class="form__send-btn" type="submit">Отправить</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
