--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <!--=================start main=================-->
     <main>
-      <!------------------ Hero ------------------->
+      <!-- Hero -->
       <section class="hero">
         <div class="container hero__container">
           <h1 class="hero__title">
@@ -155,7 +155,7 @@
         </div>
       </section>
 
-      <!--------------------------- specifics ----------------------------->
+      <!-- specifics -->
       <section class="section specifics__section">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
@@ -216,7 +216,7 @@
         </div>
       </section>
 
-      <!------------------------ work ---------------------------->
+      <!-- work -->
       <section class="section work">
         <div class="container">
           <h2 class="work__title title">Чем мы занимаемся</h2>
@@ -316,7 +316,7 @@
         </div>
       </section>
 
-      <!---------------------- team --------------------------->
+      <!-- team -->
       <section class="section team">
         <div class="container">
           <h2 class="team__title title">Наша команда</h2>
@@ -373,7 +373,7 @@
                 />
                 <img
                   class="team__img"
-                  src=""
+                  src="./images/mobile/team-img.jpg"
                   alt="Игорь Демьяненко"
                   width="270"
                 />
@@ -469,7 +469,12 @@
                     ./images/mobile/team2img@2x.jpg 2x
                   "
                 />
-                <img class="team__img" src="" alt="Ольга Репина" width="270" />
+                <img
+                  class="team__img"
+                  src="./images/mobile/team2img.jpg"
+                  alt="Ольга Репина"
+                  width="270"
+                />
               </picture>
 
               <div class="team__description">
@@ -564,7 +569,7 @@
                 />
                 <img
                   class="team__img"
-                  src=""
+                  src="./images/mobile/team3img.jpg"
                   alt="Николай Тарасов"
                   width="270"
                 />
@@ -662,7 +667,7 @@
                 />
                 <img
                   class="team__img"
-                  src=""
+                  src="./images/mobile/team4img.jpg"
                   alt="Михаил Ермаков"
                   width="270"
                 />
